# DJICameraVideoToPictureProject

./: CMakeLists.txt  main.cpp
simple/: raw_out.raw
video_to_picture/: ConvertUtil.cpp  ConvertUtil.h  video_to_picture.cpp  video_to_picture.h
